# dicerume

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: base64.rs  client.rs  db.rs  dice.rs  error.rs  handshake.rs  main.rs  server.rs  shared.rs
src/client/: pages.rs  requester.rs
src/server/: request.rs
