[package]
name = "dicerume"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui={version="0.23", optional=true}
eframe={version="0.23", optional=true}
snow="0.9.3"
serde={version="1.0", features=["derive"]}
serde_cbor = "0.11.2"
sled="0.34"
argon2 = { version = "0.5.2", optional = true }
once_cell = "1.18.0"
regex = {version = "1.10.2", features=["unicode-bool"]}
rand = "0.8.*"
base64 = "0.21.5"
chacha20poly1305 = "0.10.1"

[features]
#default=["client", "server"]
client=["egui", "eframe"]
server=["argon2"]
